--- a/member_app/templates/member_app/password_edit.html
+++ b/member_app/templates/member_app/password_edit.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
-{% block title %}Mot de passe{% endblock %}
+{% load i18n %}
+{% block title %}{% trans "Mot de passe" %}{% endblock %}
 
 {% block content %}
 
 <div class="container-fluid member-app text-black">
     <div class="row">
         <div class="col-md-10 col-lg-8 mx-auto">
-            <h2 class="text-black">Modifier votre mot de passe</h2>
+            <h2 class="text-black">{% trans "Modifier votre mot de passe" %}</h2>
             <br />
 
             <form method="POST">
@@ -14,8 +15,8 @@
                     {% csrf_token %}
                     {{ form.as_p }}
 
-                    <a href="{% url 'user_edit' %}" class="btn btn-secondary">Annuler</a>
-                    <button type="submit" class="btn btn-primary">Confirmer <i
+                    <a href="{% url 'user_edit' %}" class="btn btn-secondary">{% trans "Annuler" %}</a>
+                    <button type="submit" class="btn btn-primary">{% trans "Confirmer" %} <i
                             class="fas fa-chevron-right"></i></button>
                 </div>
             </form>
