--- a/app/templates/app/author/author_form.html
+++ b/app/templates/app/author/author_form.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
-{% block title %}Démo Django{% endblock %}
+{% load i18n %}
+{% block title %}{% trans "Démo Django" %}{% endblock %}
 
 {% block content %}
 {% load static %}
 
 <div class="container my-5" style="max-width: 500px;">
-    <h2 class="mb-4 text-primary"><i class="fas fa-folder-plus me-2"></i>{{ action_text }} une catégorie</h2>
+    <h2 class="mb-4 text-primary"><i class="fas fa-user-plus me-2"></i>{{ action_text }} {% trans "un auteur" %}</h2>
 
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
@@ -13,7 +14,7 @@
         {{form}}
 
         <div>
-            <a href="{% url 'author_list' %}" class="btn btn-outline-secondary mb-4">Retour</a>
+            <a href="{% url 'author_list' %}" class="btn btn-outline-secondary mb-4">{% trans "Retour" %}</a>
             <input type="submit" value="{{ action_text }}" class="btn btn-primary" />
         </div>
     </form>
