--- a/app/templates/app/category/cat_list.html
+++ b/app/templates/app/category/cat_list.html
@@ -1,16 +1,17 @@
 {% extends 'base.html' %}
-{% block title %}Liste des catégories{% endblock %}
+{% load i18n %}
+{% block title %}{% trans "Liste des catégories" %}{% endblock %}
 
 {% block content %}
 {% load static %}
 
 <div class="container my-5">
-    <h2 class="mb-4 text-primary"><i class="fas fa-folder me-2"></i>Liste des catégories</h2>
+    <h2 class="mb-4 text-primary"><i class="fas fa-folder me-2"></i>{% trans "Liste des catégories" %}</h2>
 
     {% if perms.app.add_category %}
     <div class="mb-4">
         <a href="{% url 'add_category' %}" class="btn btn-primary">
-            <i class="fas fa-user-plus me-2"></i>Ajouter une catégorie
+            <i class="fas fa-user-plus me-2"></i>{% trans "Ajouter une catégorie" %}
         </a>
     </div>
     {% endif %}
@@ -23,23 +24,23 @@
             </div>
             <div class="btn-group" role="group">
                 <a href="{% url 'cat_details' category.id %}" class="btn btn-outline-info btn-sm">
-                    <i class="fas fa-eye me-1"></i>Voir
+                    <i class="fas fa-eye me-1"></i>{% trans "Voir" %}
                 </a>
 
                 {% if perms.app.change_category %}
                 <a href="{% url 'edit_cat' category.id %}" class="btn btn-outline-warning btn-sm">
-                    <i class="fas fa-edit me-1"></i>Modifier
+                    <i class="fas fa-edit me-1"></i>{% trans "Modifier" %}
                 </a>
                 {% endif %}
                 {% if perms.app.delete_category %}
                 <a href="{% url 'del_cat' category.id %}" class="btn btn-outline-danger btn-sm">
-                    <i class="fas fa-trash-alt me-1"></i>Supprimer
+                    <i class="fas fa-trash-alt me-1"></i>{% trans "Supprimer" %}
                 </a>
                 {% endif %}
             </div>
         </li>
         {% empty %}
-        <li class="list-group-item text-muted">Aucune catégorie disponible.</li>
+        <li class="list-group-item text-muted">{% trans "Aucune catégorie disponible." %}</li>
         {% endfor %}
     </ul>
     {% include 'app/includes/pagination_section.html' with page_items=page_categories %}
