--- a/member_app/templates/member_app/password_edit_success.html
+++ b/member_app/templates/member_app/password_edit_success.html
@@ -1,15 +1,16 @@
 {% extends 'base.html' %}
-{% block title %}Mot de passe{% endblock %}
+{% load i18n %}
+{% block title %}{% trans "Mot de passe" %}{% endblock %}
 
 {% block content %}
 
 <div class="container-fluid member-app text-black">
     <div class="row">
         <div class="col-md-10 col-lg-8 mx-auto">
-            <h2 class="text-black">Mot de passe modififié avec succès !</h2>
+            <h2 class="text-black">{% trans "Mot de passe modifié avec succès !" %}</h2>
 
             <br /><br />
-            <a href="{% url 'index' %}" class="btn btn-primary">Continuer <i class="fas fa-chevron-right"></i></a>
+            <a href="{% url 'index' %}" class="btn btn-primary">{% trans "Continuer" %} <i class="fas fa-chevron-right"></i></a>
             <br /><br />
         </div>
     </div>
