--- a/app/templates/app/includes/pagination_section.html
+++ b/app/templates/app/includes/pagination_section.html
@@ -56,7 +56,7 @@
         <li class="page-item">
           <a class="page-link border-0 text-primary hover-bg-light" 
              href="?page={{ i }}" 
-             title="Aller à la page {{ i }}" 
+             title="{% trans 'Aller à la page' %} {{ i }}" 
              data-bs-toggle="tooltip">
             {{ i }}
           </a>
