--- a/app/templates/app/author/author_form.html
+++ b/app/templates/app/author/author_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %}{% trans "Démo Django" %}{% endblock %}
+{% block title %}BibliBoua{% endblock %}
 
 {% block content %}
 {% load static %}
