--- a/templates/base.html
+++ b/templates/base.html
@@ -113,3 +113,11 @@
 
 </body>
 </html>
+
+<style>
+/* Pour que la navbar soit au-dessus des autres éléments */
+.navbar {
+    z-index: 1040 !important;
+    position: relative !important;
+}
+</style>
